[gd_scene load_steps=4 format=3 uid="uid://co4e6yj2ed45f"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/instruction_container.gd" id="1_mqxig"]
[ext_resource type="PackedScene" uid="uid://bgbnqa4jqrx7w" path="res://addons/diisis/editor/src/typing_hint.tscn" id="2_ow7ne"]
[ext_resource type="PackedScene" uid="uid://unnyq1pkgbh" path="res://addons/diisis/editor/src/read_hint.tscn" id="3_gsr40"]

[node name="InstructionContainer" type="VBoxContainer" groups=["diisis_page_view_sensitive"]]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_mqxig")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="InstructionTextContainer" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.689033, 0.0915954, 0.171793, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/InstructionTextContainer"]
layout_mode = 2
offset_right = 574.0
offset_bottom = 93.0

[node name="InstructionTextEdit" type="CodeEdit" parent="HBoxContainer/InstructionTextContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "enter instruction here"
wrap_mode = 1
scroll_fit_content_height = true
code_completion_enabled = true
auto_brace_completion_enabled = true

[node name="ComplianceContainer" type="HBoxContainer" parent="HBoxContainer/InstructionTextContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/InstructionTextContainer/VBoxContainer/ComplianceContainer"]
layout_mode = 2
text = "!!!"

[node name="ComplianceLabel" type="Label" parent="HBoxContainer/InstructionTextContainer/VBoxContainer/ComplianceContainer"]
layout_mode = 2

[node name="InputLockContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(291, 0)
layout_mode = 2
size_flags_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/InputLockContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/InputLockContainer/PanelContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/InputLockContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Delay & Input Lock"

[node name="DelayContainer" type="GridContainer" parent="HBoxContainer/InputLockContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Before" type="Label" parent="HBoxContainer/InputLockContainer/PanelContainer/VBoxContainer/DelayContainer"]
layout_mode = 2
text = "Before Execution"

[node name="DelayBeforeSpinBox" type="SpinBox" parent="HBoxContainer/InputLockContainer/PanelContainer/VBoxContainer/DelayContainer"]
layout_mode = 2
max_value = 99999.0
step = 0.01

[node name="After" type="Label" parent="HBoxContainer/InputLockContainer/PanelContainer/VBoxContainer/DelayContainer"]
layout_mode = 2
text = "After Execution"

[node name="DelayAfterSpinBox" type="SpinBox" parent="HBoxContainer/InputLockContainer/PanelContainer/VBoxContainer/DelayContainer"]
layout_mode = 2
max_value = 99999.0
step = 0.01

[node name="ArgContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="TypingHint" parent="." instance=ExtResource("2_ow7ne")]
visible = false

[node name="ArgHint" parent="." instance=ExtResource("3_gsr40")]
visible = false

[connection signal="caret_changed" from="HBoxContainer/InstructionTextContainer/VBoxContainer/InstructionTextEdit" to="." method="_on_instruction_text_edit_caret_changed"]
[connection signal="code_completion_requested" from="HBoxContainer/InstructionTextContainer/VBoxContainer/InstructionTextEdit" to="." method="_on_instruction_text_edit_code_completion_requested"]
[connection signal="focus_entered" from="HBoxContainer/InstructionTextContainer/VBoxContainer/InstructionTextEdit" to="." method="_on_instruction_text_edit_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/InstructionTextContainer/VBoxContainer/InstructionTextEdit" to="." method="_on_instruction_text_edit_focus_exited"]
[connection signal="text_changed" from="HBoxContainer/InstructionTextContainer/VBoxContainer/InstructionTextEdit" to="." method="_on_instruction_text_edit_text_changed"]
[connection signal="item_chosen" from="TypingHint" to="." method="_on_typing_hint_item_chosen"]
