[gd_scene load_steps=2 format=3 uid="uid://co4e6yj2ed45f"]

[ext_resource type="Script" path="res://src/instruction_container.gd" id="1_mqxig"]

[node name="InstructionContainer" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_mqxig")

[node name="TemplateList" type="ItemList" parent="."]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
allow_reselect = true
auto_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(291, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Delay & Input Lock"

[node name="DelayContainer" type="GridContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Before" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/DelayContainer"]
layout_mode = 2
text = "Before Execution"

[node name="DelayBeforeSpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/DelayContainer"]
layout_mode = 2
max_value = 99999.0
step = 0.01

[node name="After" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/DelayContainer"]
layout_mode = 2
text = "After Execution"

[node name="DelayAfterSpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/DelayContainer"]
layout_mode = 2
max_value = 99999.0
step = 0.01

[node name="ArgContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="item_selected" from="TemplateList" to="." method="_on_template_list_item_selected"]
